BytecodeLift directly calculating local variables + related BytecodeGenerator fixes
Reviewed-by: psandoz